--- a/index.html
+++ b/index.html
@@ -10,6 +10,42 @@
   </head>
 
   <body>
+    <header class="header">
+      <div class="flex-container flex-container-left">
+        <input type="checkbox" id="menu" class="header__checkbox-button">
+        <label for="menu">
+          <span class="header__burger-menu"></span>
+        </label>
+        <ul class="header__category-list"> 
+          <li class="header__list-title">Categorias</li>
+          <li class="header__list-item">
+            <a href="###">Programação </a> 
+          </li>
+          <li class="header__list-item">
+            <a href="###">Front-end </a> 
+          </li>
+          <li class="header__list-item">
+            <a href="###">Infraestrutura </a> 
+          </li>
+          <li class="header__list-item">
+            <a href="###">Business </a> 
+          </li>
+          <li class="header__list-item">
+            <a href="###">Design & UX </a> 
+          </li>
+        </ul>
+
+        <img src="./assets/Logo.svg" alt="Alurabooks logo"/>
+      </div>
+
+
+      <div class="flex-container flex-container-right">
+        <img src="./assets/Favoritos.svg" alt="Heart shaped favorites icon">
+        <img src="./assets/Compras.svg" alt="Bag shaped shopping list icon">
+        <img src="./assets/Usuário.svg" alt="User icon">
+      </div>
+    </header> <!-- Here ends the header section-->
+
     
   </body>
 </html>
