Finished mobile bavigation bar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="header">
       <div class="flex-container flex-container-left">
-        <input type="checkbox" id="menu" class="header__checkbox-button">
+        <input type="checkbox" id="menu" class="header__checkbox-button"/>
         <label for="menu">
           <span class="header__burger-menu"></span>
         </label>
@@ -45,6 +45,8 @@
         <img src="./assets/Usuário.svg" alt="User icon">
       </div>
     </header> <!-- Here ends the header section-->
+
+    
 
     
   </body>
